exercise 6 - documentation